--- a/views/_css.jade
+++ b/views/_css.jade
@@ -1,2 +1,2 @@
 link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Muli", type='text/css')
-link(rel="stylesheet", href="/stylesheets/awsS3ImageHelper.css")
+link(rel="stylesheet", href="/stylesheets/home.css")
